--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>BrunysIXLWork</title>
     <link rel="icon" type="image/x-icon" href="/storage/images/main/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/storage/css/styles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/styles.css">
 </head>
 <body>
 
@@ -28,17 +28,17 @@
     <div class="navbar">
         <div class="navbar-left">
             <a href="/">
-                <img src="/storage/images/main/logo.png" class="logo">
+                <img src="/lucaisannoying/storage/images/main/logo.png" class="logo">
                 <p class="nav-text">BRUNYSIXLWORK</p>
             </a>
         </div>
         <div class="navbar-right">
-            <a href="/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
-            <a href="/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
-            <a href="/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
-            <a href="/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
-            <a href="/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
-            <a href="/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
+            <a href="/lucaisannoying/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
+            <a href="/lucaisannoying/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
+            <a href="/lucaisannoying/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
+            <a href="/lucaisannoying/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
+            <a href="/lucaisannoying/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
+            <a href="/lucaisannoying/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
         </div>
     </div>
 
@@ -47,7 +47,7 @@
             <p>Play over 100+ free games consisting of HTML, Flash, and Web Retro.</p>
 
             <div class="buttons-container">
-            <a href="/games.html"><button class="sigma">Explore Games</button></a>
+            <a href="/lucaisannoying/games.html"><button class="sigma">Explore Games</button></a>
             
             <a href="https://discord.gg/3zyaAkuBRM"><button class="discord">Join Discord</button></a>
             </div>
@@ -104,16 +104,16 @@
         </div>
     </div>
 
-    <script src="/storage/js/script.js"></script>
-    <script src="/storage/js/cloak.js"></script>
-    <script src="/storage/js/data.js"></script>
-    <script src="/storage/js/settings.js"></script>
+    <script src="/lucaisannoying/storage/js/script.js"></script>
+    <script src="/lucaisannoying/storage/js/cloak.js"></script>
+    <script src="/lucaisannoying/storage/js/data.js"></script>
+    <script src="/lucaisannoying/storage/js/settings.js"></script>
 </body>
 </html>
 
     <meta property="og:title" content="BrunysIXLWork">
     <meta property="og:description" content="A gaming and proxy service just for you.">
-    <meta property="og:image" content="/storage/images/main/logo.png">
+    <meta property="og:image" content="/lucaisannoying/storage/images/main/logo.png">
     <meta property="og:image:width" content="100">
     <meta property="og:image:height" content="100">
     <meta property="og:url" content="https://brunysixlwork.site">
