--- a/partners.html
+++ b/partners.html
@@ -10,9 +10,9 @@
   gtag('config', 'G-TFZ72L5FPQ');
 </script>
     <title>BrunysIXLWork | Partners</title>
-    <link rel="icon" type="image/x-icon" href="/storage/images/main/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/lucaisannoying/storage/images/main/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/storage/css/styles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/styles.css">
 </head>
 <body>
 
@@ -28,17 +28,17 @@
     <div class="navbar">
         <div class="navbar-left">
             <a href="/">
-                <img src="/storage/images/main/logo.png" class="logo">
+                <img src="/lucaisannoying/storage/images/main/logo.png" class="logo">
                 <p class="nav-text">BRUNYSIXLWORK</p>
             </a>
         </div>
         <div class="navbar-right">
-            <a href="/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
-            <a href="/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
-            <a href="/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
-            <a href="/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
-            <a href="/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
-            <a href="/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
+            <a href="/lucaisannoying/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
+            <a href="/lucaisannoying/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
+            <a href="/lucaisannoying/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
+            <a href="/lucaisannoying/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
+            <a href="/lucaisannoying/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
+            <a href="/lucaisannoying/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
         </div>
     </div>
 
@@ -49,25 +49,25 @@
       
         <div class="image-item">
             <a href="https://everyonegetsnews.org/">
-                <img src="/storage/images/partners/4b3dc01d697cdbe49e3d5c6504aa707e.png">
+                <img src="/lucaisannoying/storage/images/partners/4b3dc01d697cdbe49e3d5c6504aa707e.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://maxgames.pages.dev/">
-                <img src="/storage/images/partners/IMG_5215.png">
+                <img src="/lucaisannoying/storage/images/partners/IMG_5215.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://sites.google.com/view/dannybredlessons/home">
-                <img src="/storage/images/partners/IMG_5227.png">
+                <img src="/lucaisannoying/storage/images/partners/IMG_5227.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://www.60glasses.buzz">
-                <img src="/storage/images/partners/IMG_5225.png">
+                <img src="/lucaisannoying/storage/images/partners/IMG_5225.png">
             </a>
         </div>
 
@@ -79,31 +79,31 @@
 
         <div class="image-item">
             <a href="https://entertopia.vercel.app/">
-                <img src="/storage/images/partners/image_2024-10-12_164448661.png">
+                <img src="/lucaisannoying/storage/images/partners/image_2024-10-12_164448661.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://velara.cc">
-                <img src="/storage/images/partners/image_2024-10-12_164659004.png">
+                <img src="/lucaisannoying/storage/images/partners/image_2024-10-12_164659004.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://sites.google.com/view/master-editionn/home?authuser=0">
-                <img src="/storage/images/partners/image_2024-10-12_220631841.png">
+                <img src="/lucaisannoying/storage/images/partners/image_2024-10-12_220631841.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://mexismath.web.app">
-                <img src="/storage/images/partners/mm.png">
+                <img src="/lucaisannoying/storage/images/partners/mm.png">
             </a>
         </div>
 
         <div class="image-item">
             <a href="https://szvy.website">
-                <img src="/storage/images/partners/new_szvy_logo_bg.png">
+                <img src="/lucaisannoying/storage/images/partners/new_szvy_logo_bg.png">
             </a>
         </div>
 
