--- a/prox.html
+++ b/prox.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BrunysIXLWork | Iframe</title>
-    <link rel="stylesheet" href="/storage/css/evenmoremorestyles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/evenmoremorestyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -29,9 +29,9 @@
 
     <iframe id="viewer-iframe" src=""></iframe>
 
-    <script src="/static/page.js"></script>
-    <script src="/storage/js/cloak.js"></script>
-    <script src="/storage/js/data.js"></script>
-    <script src="/storage/js/settings.js"></script>
+    <script src="/lucaisannoying/static/page.js"></script>
+    <script src="/lucaisannoying/storage/js/cloak.js"></script>
+    <script src="/lucaisannoying/storage/js/data.js"></script>
+    <script src="/lucaisannoying/storage/js/settings.js"></script>
 </body>
 </html>
