--- a/proxy.html
+++ b/proxy.html
@@ -12,8 +12,8 @@
     <title>BrunysIXLWork | Proxy</title>
     <link rel="icon" type="image/x-icon" href="/storage/images/main/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/storage/css/styles.css">
-    <link rel="stylesheet" href="/storage/css/evenmorestyles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/styles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/evenmorestyles.css">
 </head>
 <body>
 
@@ -29,17 +29,17 @@
     <div class="navbar">
         <div class="navbar-left">
             <a href="/">
-                <img src="/storage/images/main/logo.png" class="logo">
+                <img src="/lucaisannoying/storage/images/main/logo.png" class="logo">
                 <p class="nav-text">BRUNYSIXLWORK</p>
             </a>
         </div>
         <div class="navbar-right">
-            <a href="/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
-            <a href="/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
-            <a href="/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
-            <a href="/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
-            <a href="/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
-            <a href="/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
+            <a href="/lucaisannoying/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
+            <a href="/lucaisannoying/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
+            <a href="/lucaisannoying/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
+            <a href="/lucaisannoying/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
+            <a href="/lucaisannoying/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
+            <a href="/lucaisannoying/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
         </div>
     </div>
 
@@ -52,16 +52,16 @@
         </button>
     </form>
 
-    <script src="/static/loader.js"></script>
-    <script src="/static/uv/uv.bundle.js" defer></script>
-    <script src="/static/uv/uv.config.js" defer></script>
-    <script src="/static/register-sw.js" defer></script>
-    <script src="/static/search.js" defer></script>
-    <script src="/static/index.js" defer></script>
-    <script src="/storage/js/script.js"></script>
-    <script src="/storage/js/cloak.js"></script>
-    <script src="/storage/js/data.js"></script>
-    <script src="/storage/js/settings.js"></script>
+    <script src="/lucaisannoying/static/loader.js"></script>
+    <script src="/lucaisannoying/static/uv/uv.bundle.js" defer></script>
+    <script src="/lucaisannoying/static/uv/uv.config.js" defer></script>
+    <script src="/lucaisannoying/static/register-sw.js" defer></script>
+    <script src="/lucaisannoying/static/search.js" defer></script>
+    <script src="/lucaisannoying/static/index.js" defer></script>
+    <script src="/lucaisannoying/storage/js/script.js"></script>
+    <script src="/lucaisannoying/storage/js/cloak.js"></script>
+    <script src="/lucaisannoying/storage/js/data.js"></script>
+    <script src="/lucaisannoying/storage/js/settings.js"></script>
 </body>
 </html>
 
