--- a/apps.html
+++ b/apps.html
@@ -10,9 +10,9 @@
   gtag('config', 'G-TFZ72L5FPQ');
 </script>
     <title>BrunysIXLWork | Apps</title>
-    <link rel="icon" type="image/x-icon" href="/storage/images/main/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/lucaisannoying/storage/images/main/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/storage/css/styles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/styles.css">
 </head>
 <body>
 
@@ -28,17 +28,17 @@
     <div class="navbar">
         <div class="navbar-left">
             <a href="/">
-                <img src="/storage/images/main/logo.png" class="logo">
+                <img src="/lucaisannoying/storage/images/main/logo.png" class="logo">
                 <p class="nav-text">BRUNYSIXLWORK</p>
             </a>
         </div>
         <div class="navbar-right">
-            <a href="/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
-            <a href="/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
-            <a href="/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
-            <a href="/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
-            <a href="/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
-            <a href="/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
+            <a href="/lucaisannoying/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
+            <a href="/lucaisannoying/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
+            <a href="/lucaisannoying/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
+            <a href="/lucaisannoying/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
+            <a href="/lucaisannoying/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
+            <a href="/lucaisannoying/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
         </div>
     </div>
 
@@ -48,158 +48,158 @@
     <div class="container" id="imageContainer">
       
         <div class="image-item" data-label="google">
-            <a href="/iframe.html?url=/storage/load/google/">
-                <img src="/storage/load/google/IMG_5324.webp">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/google/">
+                <img src="/lucaisannoying/storage/load/google/IMG_5324.webp">
                 <div class="label">Google</div>
             </a>
         </div>
 
         <div class="image-item" data-label="now.gg">
-            <a href="/iframe.html?url=/storage/load/nowgg/">
-                <img src="/storage/load/nowgg/IMG_5325.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/nowgg/">
+                <img src="/lucaisannoying/storage/load/nowgg/IMG_5325.png">
                 <div class="label">Now.gg</div>
             </a>
         </div>
 
         <div class="image-item" data-label="reddit">
-            <a href="/iframe.html?url=/storage/load/reddit/">
-                <img src="/storage/load/reddit/IMG_5326.jpeg">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/reddit/">
+                <img src="/lucaisannoying/storage/load/reddit/IMG_5326.jpeg">
                 <div class="label">Reddit</div>
             </a>
         </div>
 
         <div class="image-item" data-label="xbox">
-            <a href="/iframe.html?url=/storage/load/xbox/">
-                <img src="/storage/load/xbox/IMG_5327.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/xbox/">
+                <img src="/lucaisannoying/storage/load/xbox/IMG_5327.png">
                 <div class="label">Xbox</div>
             </a>
         </div>
 
         <div class="image-item" data-label="chatgpt">
-            <a href="/iframe.html?url=/storage/load/chatgpt/">
-                <img src="/storage/load/chatgpt/IMG_5328.jpeg">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/chatgpt/">
+                <img src="/lucaisannoying/storage/load/chatgpt/IMG_5328.jpeg">
                 <div class="label">ChatGPT</div>
             </a>
         </div>
 
         <div class="image-item" data-label="cool math games">
-            <a href="/iframe.html?url=/storage/load/coolmathgames/">
-                <img src="/storage/load/coolmathgames/IMG_5329.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/coolmathgames/">
+                <img src="/lucaisannoying/storage/load/coolmathgames/IMG_5329.png">
                 <div class="label">Cool Math Games</div>
             </a>
         </div>
 
         <div class="image-item" data-label="crazy games">
-            <a href="/iframe.html?url=/storage/load/crazygames/">
-                <img src="/storage/load/crazygames/IMG_5330.webp">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/crazygames/">
+                <img src="/lucaisannoying/storage/load/crazygames/IMG_5330.webp">
                 <div class="label">Crazy Games</div>
             </a>
         </div>
 
         <div class="image-item" data-label="facebook">
-            <a href="/iframe.html?url=/storage/load/facebook/">
-                <img src="/storage/load/facebook/IMG_5332.jpeg">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/facebook/">
+                <img src="/lucaisannoying/storage/load/facebook/IMG_5332.jpeg">
                 <div class="label">Facebook</div>
             </a>
         </div>
 
         <div class="image-item" data-label="discord">
-            <a href="/iframe.html?url=/storage/load/discord/">
-                <img src="/storage/load/discord/IMG_5331.jpeg">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/discord/">
+                <img src="/lucaisannoying/storage/load/discord/IMG_5331.jpeg">
                 <div class="label">Discord</div>
             </a>
         </div>
 
         <div class="image-item" data-label="poki">
-            <a href="/iframe.html?url=/storage/load/poki/">
-                <img src="/storage/load/poki/IMG_5333.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/poki/">
+                <img src="/lucaisannoying/storage/load/poki/IMG_5333.png">
                 <div class="label">Poki</div>
             </a>
         </div>
 
         <div class="image-item" data-label="tiktok">
-            <a href="/iframe.html?url=/storage/load/tiktok/">
-                <img src="/storage/load/tiktok/IMG_5335.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/tiktok/">
+                <img src="/lucaisannoying/storage/load/tiktok/IMG_5335.png">
                 <div class="label">tiktok</div>
             </a>
         </div>
 
         <div class="image-item" data-label="snapchat">
-            <a href="/iframe.html?url=/storage/load/snapchat/">
-                <img src="/storage/load/snapchat/IMG_5334.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/snapchat/">
+                <img src="/lucaisannoying/storage/load/snapchat/IMG_5334.png">
                 <div class="label">Snapchat</div>
             </a>
         </div>
 
         <div class="image-item" data-label="twitch">
-            <a href="/iframe.html?url=/storage/load/twitch/">
-                <img src="/storage/load/twitch/IMG_5336.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/twitch/">
+                <img src="/lucaisannoying/storage/load/twitch/IMG_5336.png">
                 <div class="label">Twitch</div>
             </a>
         </div>
 
         <div class="image-item" data-label="x">
-            <a href="/iframe.html?url=/storage/load/x/">
-                <img src="/storage/load/x/IMG_5337.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/x/">
+                <img src="/lucaisannoying/storage/load/x/IMG_5337.png">
                 <div class="label">X</div>
             </a>
         </div>
 
         <div class="image-item" data-label="youtube">
-            <a href="/iframe.html?url=/storage/load/youtube/">
-                <img src="/storage/load/youtube/IMG_5338.webp">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/youtube/">
+                <img src="/lucaisannoying/storage/load/youtube/IMG_5338.webp">
                 <div class="label">YouTube</div>
             </a>
         </div>
 
         <div class="image-item" data-label="hd today">
-            <a href="/iframe.html?url=/storage/load/hdtoday/">
-                <img src="/storage/load/hdtoday/IMG_5342.jpeg">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/hdtoday/">
+                <img src="/lucaisannoying/storage/load/hdtoday/IMG_5342.jpeg">
                 <div class="label">HD Today</div>
             </a>
         </div>
 
         <div class="image-item" data-label="aptoid">
-            <a href="/iframe.html?url=/storage/load/aptoid/">
-                <img src="/storage/load/aptoid/IMG_5343.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/aptoid/">
+                <img src="/lucaisannoying/storage/load/aptoid/IMG_5343.png">
                 <div class="label">Aptoid</div>
             </a>
         </div>
 
         <div class="image-item" data-label="android emulator">
-            <a href="/iframe.html?url=/storage/load/android/">
-                <img src="/storage/load/android/logo.webp">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/android/">
+                <img src="/lucaisannoying/storage/load/android/logo.webp">
                 <div class="label">Android Emulator</div>
             </a>
         </div>
 
         <div class="image-item" data-label="emulatorjs">
-            <a href="/iframe.html?url=/storage/load/emulatorjs/">
-                <img src="/storage/load/emulatorjs/docs/Logo-light.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/emulatorjs/">
+                <img src="/lucaisannoying/storage/load/emulatorjs/docs/Logo-light.png">
                 <div class="label">EmulatorJS</div>
             </a>
         </div>
 
         <div class="image-item" data-label="web retro">
-            <a href="/iframe.html?url=/storage/load/webretro/">
-                <img src="/storage/load/webretro/webretro.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/webretro/">
+                <img src="/lucaisannoying/storage/load/webretro/webretro.png">
                 <div class="label">Web Retro</div>
             </a>
         </div>
 
         <div class="image-item" data-label="sound board">
-            <a href="/iframe.html?url=/storage/load/soundboard/">
-                <img src="/storage/load/soundboard/img/mlg-favicon.png">
+            <a href="/lucaisannoying/iframe.html?url=/storage/load/soundboard/">
+                <img src="/lucaisannoying/storage/load/soundboard/img/mlg-favicon.png">
                 <div class="label">Sound Board</div>
             </a>
         </div>
 
     </div>
 
-    <script src="/storage/js/box.js"></script>
-    <script src="/storage/js/script.js"></script>
-    <script src="/storage/js/cloak.js"></script>
-    <script src="/storage/js/data.js"></script>
-    <script src="/storage/js/settings.js"></script>
+    <script src="/lucaisannoying/storage/js/box.js"></script>
+    <script src="/lucaisannoying/storage/js/script.js"></script>
+    <script src="/lucaisannoying/storage/js/cloak.js"></script>
+    <script src="/lucaisannoying/storage/js/data.js"></script>
+    <script src="/lucaisannoying/storage/js/settings.js"></script>
 </body>
 </html>
