--- a/extra.html
+++ b/extra.html
@@ -10,9 +10,9 @@
   gtag('config', 'G-TFZ72L5FPQ');
 </script>
     <title>BrunysIXLWork | Extra</title>
-    <link rel="icon" type="image/x-icon" href="/storage/images/main/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/lucaisannoying/storage/images/main/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/storage/css/styles.css">
+    <link rel="stylesheet" href="/lucaisannoying/storage/css/styles.css">
 </head>
 <body>
 
@@ -33,23 +33,23 @@
             </a>
         </div>
         <div class="navbar-right">
-            <a href="/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
-            <a href="/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
-            <a href="/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
-            <a href="/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
-            <a href="/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
-            <a href="/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
+            <a href="/lucaisannoying/games.html" class="nav-button"><i class="fas fa-gamepad"></i></a>
+            <a href="/lucaisannoying/apps.html" class="nav-button"><i class="fas fa-th"></i></a>
+            <a href="/lucaisannoying/proxy.html" class="nav-button"><i class="fas fa-globe"></i></a>
+            <a href="/lucaisannoying/ai.html" class="nav-button"><i class="fa-solid fa-robot"></i></a>
+            <a href="/lucaisannoying/extra.html" class="nav-button"><i class="fas fa-plus"></i></a>
+            <a href="/lucaisannoying/settings.html" class="nav-button"><i class="fas fa-cog"></i></a>
         </div>
     </div>
 
     <h1 style="margin-top: 100px">Extras</h1>
     <p>extras for BIW like partners and alt links!</p>
     <a href="https://dsc.gg/bruny"><button class="sigma">ALT LINKS</button></a>
-    <a href="/partners.html"><button class="sigma">PARTNERS</button></a>
+    <a href="/lucaisannoying/partners.html"><button class="sigma">PARTNERS</button></a>
 
-    <script src="/storage/js/script.js"></script>
-    <script src="/storage/js/cloak.js"></script>
-    <script src="/storage/js/data.js"></script>
-    <script src="/storage/js/settings.js"></script>
+    <script src="/lucaisannoying/storage/js/script.js"></script>
+    <script src="/lucaisannoying/storage/js/cloak.js"></script>
+    <script src="/lucaisannoying/storage/js/data.js"></script>
+    <script src="/lucaisannoying/storage/js/settings.js"></script>
 </body>
 </html>
